# webserver

./: .containerignore  .gitignore  Containerfile  MANIFEST.in  README.txt  maildirdaemon.service  pyproject.toml  tasks.py  unit.json
.github/workflows/: push-to-ar.yaml
app/: main.py
postfix/: setup  setup.bash
src/app/: __init__.py  cgdb.py  conf.py  docid.py  idparser.py  maildirdaemon.py  main.py  parsemail.py  search.py  utils.py
src/app/static/: style.css
src/app/templates/: 404.html.jinja2  about.html.jinja2  base.html.jinja2  howto.html.jinja2  index.html.jinja2  local_render.json  search.html.jinja2  submit.html.jinja2  subscribe.html.jinja2
src/maildird/: maildird.py
src/policyd/: policyd.py
src/sdidmilterd/: sdidmilterd.py
static/: style.css
systemd/: maildirdaemon.service  postfixpolicy.service  sdidmilter.service
templates/: base.html.jinja2  contact.html.jinja2  index.html.jinja2  submit.html.jinja2
tests/: fixture_mail.py  fixture_requests.py  test_database.py  test_docid.py  test_idparser.py  test_parsemail.py  test_utils.py
tests/containers/: postgresql.yml
