[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webserver"
version = "0.4.0"
authors = [
  { name="Nikolaos Chatzikonstantinou", email="nchatz314@gmail.com" },
]
description = "The Communal Growth webserver"
readme = "README.txt"
license = {file = "COPYING"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "click >= 8.2.1",
    "dateparser >= 1.2.2",
    "defusedxml >= 0.7.1",
    "lark >= 1.2.2",
    "litestar[standard, sqlalchemy] >= 2.16",
    "nameparser >= 1.1.3",
    "psycopg >= 3.2.9",
    "requests >= 2.32.4",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-mock",
    "pytest-xdist",
]
dev = [
    "black"
]

[project.scripts]
maildirdaemon = "app.maildirdaemon:main"

[project.urls]
Homepage = "https://github.com/communalgrowth/webserver"
Issues = "https://github.com/communalgrowth/webserver/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -m 'not test_slow'"
testpaths = [
    "tests",
]
markers = [
    "test_podman_compose: test requires podman-compose(1).",
    "test_slow: test is slow."
]
